[package]
name = "dendro"
version = "0.1.0"
edition = "2021"

[features]
default =[]
frontend = ["gloo", "gloo-net",  "wasm-bindgen", "yew", "web-sys", "wasm-bindgen-futures", "serde-wasm-bindgen"]
backend = ["actix", "actix-rt", "actix-files", "actix-web-actors", "actix-web", "futures", "http", "openssl", "rand", "sqlx"]

# [lib]
#name = "dendro"
#crate_type = ["cdylib", "staticlib"]

[dependencies]

# used for both, frontend and backend
anyhow = { version = "=1.0" }
async-trait = { version = "0.1"}
serde = { version = "=1.0", default-features = false, features = ["derive"]}
serde_json = { version = "=1.0", default-features = false, features = ["alloc"]}
serde_repr  = { version = "=0.1", default-features = false}
uuid = { version = "=1.7", features = ["serde"], default-features = false }


# only used for frontend
gloo-net = { version = "0.5", optional = true }
gloo = {version = "0.11", optional = true}
yew = {version ="0.21", optional = true, features = ["csr"]}
wasm-bindgen = { version = "0.2", optional =  true }
wasm-bindgen-futures = { version = "0.4", optional =  true }
web-sys = {version = "0.3", optional = true, features = ["HtmlInputElement", "HtmlSelectElement"]}
serde-wasm-bindgen = { version = "0.6", optional =  true}

# only used for backend
actix = { version  = "0.13", optional = true}
actix-rt = { version  = "2.2.0", optional = true}
actix-files = { version  = "0.6.0", optional = true}
actix-web-actors = { version  = "4.1", optional = true}
actix-web = { version = "4.0", features = ["openssl"], optional = true}
futures = { version  = "0.3", optional = true}
http = { version ="0.2.1", optional = true}
openssl = { version = "0.10", features = ["v110", "vendored"], optional = true}
rand  = { version = "0.8.3", optional = true}
sqlx = { version = "0.6", features = [  "runtime-tokio-rustls", "postgres", "uuid"] , optional = true}
#tokio = { version ="1.13", features = ["full", "time"], optional = true}


[profile.release]
opt-level = 1       # Optimize for size.
lto = "thin"         # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.dev]
opt-level = 0     # Optimize for size.
lto = "thin"         # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic


[dev-dependencies]
